# implement-RAG

./: README.md
graph-rag-system/: .Dockerfile  Dockerfile  pyproject.toml
graph-rag-system/src/: RAG.ipynb  data.json  data.txt  main.py
graph-rag-system/src/data_ingestion/: data_collection.py
