[tool.poetry]
name = "graph-rag-system"
version = "0.1.0"
description = "Graph-based RAG pipeline using Langchain and Langgraph"
authors = ["Nimish Kumar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langgraph = "^0.2.45"
pymongo = "^4.10.1"
chromadb = "^0.5.18"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
langchain-community = "^0.3.5"
python-nmap = "^0.7.1"
beautifulsoup4 = "^4.12.3"
pytesseract = "^0.3.13"
lxml = "^5.3.0"
networkx = "^3.4.2"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
python-dotenv = "^1.0.1"
pathlib = "^1.0.1"
pillow = "^11.0.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
ollama = "^0.3.3"
tiktoken = "^0.8.0"
openai = "0.28"
scipy = "^1.14.1"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
